--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ before_script:
 script:
  - pipenv run python3 main.py
  - pipenv run python3 agreements.py
+ - pipenv run python3 save_dataframe.py
